--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
 
     </div>
     
+    <script src="./assets/js/vanilla-tilt.min.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelectorAll(".product__box"), {
+            max: 25,
+            speed: 400
+        });
+    </script>
 </body>
 </html>
