--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Mousemove Card 3D</title>
+    <title>Hover Card 3D</title>
 </head>
 <body>
 
