--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <footer class="footer">
-        <p>By Marcos Bort - with vanilla-tilt</p>
+        <p>Code and Design by Marcos Bort - with vanilla-tilt</p>
     </footer>
 
     <script src="./assets/js/vanilla-tilt.min.js"></script>
