--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css -->
+    <link rel="icon" type="favicon/x-con" href="https://marcosbort.github.io/favicon-mb/favicon.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hover Card 3D</title>
 </head>
@@ -42,7 +43,7 @@
     </div>
     
     <footer class="footer">
-        <p>Code and Design by Marcos Bort - with vanilla-tilt</p>
+        <p>Design and Code by Marcos Bort - with vanilla-tilt</p>
     </footer>
 
     <script src="./assets/js/vanilla-tilt.min.js"></script>
