--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Hover Card 3D</title>
 </head>
 <body>
+    <div class="title">
+        <p>Design and Code by Marcos Bort - with vanilla-tilt</p>
+    </div>
+
     <div class="general-container">
 
         <div class="product__container">
@@ -41,10 +45,6 @@
         </div>
         
     </div>
-    
-    <footer class="footer">
-        <p>Design and Code by Marcos Bort - with vanilla-tilt</p>
-    </footer>
 
     <script src="./assets/js/vanilla-tilt.min.js"></script>
     <script>
