--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="title">
-        <p>Design and Code by Marcos Bort - with vanilla-tilt</p>
+        <p>Design and Code by Marcos Bort</p>
     </div>
 
     <div class="general-container">
