--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Hover Card 3D</title>
 </head>
 <body>
-    <div class="title">
+    <div class="title-top">
         <p>Design and Code by Marcos Bort</p>
     </div>
 
