--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <title>Hover Card 3D</title>
 </head>
 <body>
-    <div class="title-top">
-        <p>Design and Code by Marcos Bort</p>
-    </div>
+    <p class="title-top">Design and Code by Marcos Bort</p>
 
     <div class="general-container">
 
@@ -43,15 +41,11 @@
             </div>
 
         </div>
-        
     </div>
 
     <script src="./assets/js/vanilla-tilt.min.js"></script>
     <script>
-        VanillaTilt.init(document.querySelectorAll(".product__box"), {
-            max: 25,
-            speed: 400
-        });
+        VanillaTilt.init(document.querySelectorAll(".product__box"), { max: 25, speed: 400 });
     </script>
     
 </body>
